Migrate remaining python code to bash